@@ -1,70 +1,122 @@
 # Java Memory Management
 
-## Theory
-
 Java Memory Management is a process of managing memory in Java applications through automatic garbage collection and memory allocation. Understanding memory management helps in optimizing performance and resource usage in Java applications.
 
-### Key Concepts
+## Types of Memory Areas Allocated By the JVM
 
-1. **Memory Areas in Java**
+The Java Virtual Machine (JVM) allocates memory in several distinct areas to manage different aspects of program execution. Each area has a specific role and characteristics, which are crucial for understanding JVM memory management and optimization.
 
-   - **Heap**:
-     - Stores objects, their data and arrays.
-     - Instantiated during the virtual machine startup.
-     - The heap is divided into the Young Generation (Eden Space, Survivor Spaces) and the Old Generation (Tenured Space).
-       - **Generational garbage collectors** adds an age field to the objects that are assigned a memory.
-       - On the basis of how many clock cycles the objects have survived, objects are grouped and are allocated an `age` accordingly.
-     - When a `new` keyword is used, object is assigned a space in heap, but the reference of the same exists onto the stack.
-     - There exists one and only one heap for a running JVM process.
-   - **Stack**:
-     - Stores local variables, method calls, and execution contexts. Each thread has its own stack.
-     - A stack is created at the same time when a thread is created and is used to store data and partial results which will be needed while returning value for method and performing dynamic linking.
-     - Stacks can either be of fixed or dynamic size. The size of a stack can be chosen independently when it is created.
-   - **Method Area**:
-     - Stores class metadata, method data, and constant pool information.
-     - It is a logical part of the heap area and is created on virtual machine startup.
-     - This memory is allocated for class structures, method data and constructor field data, and also for interfaces or special method used in class.
-     - Heap can be of fixed or dynamic size depending upon the system’s configuration.
-   - **Program Counter (PC) Register**:
-     - Keeps track of the current instruction being executed by the thread.
-     - Each JVM thread which carries out the task of a specific method has a program counter register associated with it.
+### 1. Class (Method) Area
 
-2. **Garbage Collection**
+- **Definition**: The Class Area, also known as the Method Area, is used to store class-level data.
+- It is a logical part of the heap area and is created on virtual machine startup.
 
-   - **Definition**:
+- **Characteristics**:
+  - **Stores**: Class definitions, including methods, fields, and constants. It also holds runtime constant pool information.
+  - **Lifetime**: Exists for the duration of the JVM process and is shared among all threads.
+  - **Memory Management**: Managed by the JVM. The size can be controlled using JVM options (e.g., `-XX:MaxPermSize` for older JVMs or `-XX:MaxMetaspaceSize` for newer JVMs).
 
-     - The process of automatically freeing up memory by removing objects that are no longer in use.
-     - Reduces the burden of programmer by automatically performing the allocation or deallocation of memory.
+### 2. Heap
 
-   - **Garbage Collector tuning**:
+- **Definition**: Heap memory is used for dynamic memory allocation where objects and their data are stored. Arrays are stored in heap too. It is managed by the Garbage Collector.
 
-     - Garbage collection process causes the rest of the processes or threads to be paused and thus is costly in nature.
-     - This problem is unacceptable for the client but can be eliminated by applying several garbage collector based algorithms.
-     - This process of applying algorithm is called Garbage Collector tuning and is important for improving the performance of a program.
+- **Characteristics**:
 
-   - **Types of Garbage Collectors**:
+  - **Stores**: All objects and their associated data. It is divided into Young Generation (Eden Space and Survivor Spaces) and Old Generation (Tenured Space).
+  - **Scope**: Accessible from anywhere in the application. All objects are stored in the heap.
+  - **Lifetime**: Managed by the Garbage Collector. Objects are kept in memory as long as they are referenced.
+  - **Size**: Larger compared to the stack. Configurable through JVM options (-Xms and -Xmx).
+  - **Access Speed**: Slower access compared to stack due to garbage collection and memory management overhead.
+  - **Safety**: Heap memory allocation isn’t as thread-safe as Stack memory allocation because the data stored in this space is accessible or visible to all threads.
+  - **java.lang.OutOfMemoryError**: We receive the corresponding error message if Heap-space is entirely full, `java.lang.OutOfMemoryError` by JVM.
+  - **Garbage Collector**: This memory allocation scheme is different from the Stack-space allocation, here no automatic de-allocation feature is provided. We need to use a Garbage collector to remove the old unused objects in order to use the memory efficiently.
 
-     - **Serial GC**: Uses a single thread for garbage collection, suitable for single-threaded applications.
-     - **Parallel GC**: Uses multiple threads to speed up garbage collection, suitable for multi-threaded applications.
-     - **Concurrent Mark-Sweep (CMS) GC**: Minimizes pauses by performing most of the garbage collection concurrently with the application.
-     - **G1 GC (Garbage-First)**: Aims to provide high throughput and predictable pause times by dividing the heap into regions.
+- **3 Categories**
+  - Heap-memory allocation is further divided into three categories
+    1. **Young Generation**
+       - This is the part of the heap where new objects are allocated.
+       - When the Young Generation fills up, a minor garbage collection (GC) event occurs to reclaim space from objects that are no longer needed.
+       - The Young Generation itself is divided into the Eden Space and two Survivor Spaces (S0 and S1).
+       - Objects that survive multiple garbage collection cycles in the Young Generation are eventually promoted to the Old Generation.
+    2. **Old or Tenured Generation**
+       - This part of the heap holds objects that have survived multiple garbage collection cycles in the Young Generation and are considered to be long-lived.
+       - It is subject to full garbage collection, which is typically more expensive than minor GC events affecting the Young Generation.
+    3. **Permanent Generation** (Post Java 8, it is replaced by Metaspace)
+       - This area stores the JVM's metadata, such as class definitions, method information, and other data related to the runtime environment.
+       - In Java 8 and later, the Permanent Generation was replaced by Metaspace, which dynamically grows and is no longer part of the heap.
 
-   - **`System.gc()`** and **`Runtime.gc()`** are the methods which requests for Garbage collection to JVM explicitly but it doesn’t ensures garbage collection as the final decision of garbage collection is of JVM only.
+### 3. Stack
 
-3. **Memory Leaks**
+- **Definition**: The Stack is used for storing local variables and method call information. It operates on a Last In, First Out (LIFO) principle.
+- **Characteristics**:
+  - **Stores**: Method call information and local variables (primitive data types and object references). Each thread has its own stack.
+  - **Scope**: Limited to the method or block in which it is defined.
+  - **Lifetime**: Automatically managed by the Java runtime. Variables are destroyed when the method or block exits.
+  - **Size**: Typically small compared to the Heap. Limited by the stack size configured in the JVM.
+  - **Access Speed**: Faster access because of its LIFO nature and lack of overhead in managing memory.
+  - **Java.lang.StackOverFlowError**: We receive the corresponding error `Java.lang.StackOverFlowError` by JVM, If the stack memory is filled completely.
 
-   - **Definition**: Occur when objects are no longer used but are still referenced, preventing them from being garbage collected.
-   - **Detection**: Tools like VisualVM, Eclipse MAT, and JProfiler can help identify memory leaks.
+### 4. Program Counter (PC) Register
 
-4. **JVM Memory Management**
-   - **Heap Size**: Can be configured using JVM options (`-Xms` for initial heap size and `-Xmx` for maximum heap size).
-   - **Garbage Collection Tuning**: JVM options such as `-XX:+UseG1GC` or `-XX:+UseConcMarkSweepGC` can be used to select and tune garbage collectors.
+- **Definition**: The PC Register keeps track of the address of the currently executing instruction.
+- **Characteristics**:
+  - **Stores**: The address of the next instruction to be executed by the thread.
+  - **Lifetime**: Exists as long as the thread is running. Each thread has its own PC Register.
+  - **Memory Management**: Automatically managed by the JVM. It ensures that instructions are executed in the correct order.
 
-## Use Cases
+### 5. Native Method Stack
 
-- **Optimizing Application Performance**: Proper memory management ensures efficient use of memory resources and improves application performance.
-- **Preventing Memory Leaks**: Understanding memory management helps in identifying and fixing memory leaks, which can lead to application crashes or slowdowns.
-- **Configuring JVM Settings**: Adjusting heap size and garbage collection settings based on application needs helps in achieving better performance and resource utilization.
+- **Definition**: The Native Method Stack is used for native method calls (methods written in languages other than Java, such as C or C++).
+- **Characteristics**:
+  - **Stores**: Native method execution contexts, similar to the Java stack but for native methods.
+  - **Lifetime**: Exists as long as the native methods are being executed.
+  - **Memory Management**: Size can be controlled using JVM options. Managed independently of the Java stack.
+
+### Use Cases
+
+- **Class Area**: Manages class-level metadata and ensures efficient class loading and reflection.
+- **Heap**: Provides a dynamic memory pool for object storage and management, including automatic garbage collection.
+- **Stack**: Manages method execution and local variables, crucial for method calls and recursion.
+- **PC Register**: Ensures accurate execution flow by keeping track of the current instruction.
+- **Native Method Stack**: Facilitates integration with native libraries and systems.
+
+### Key Differences Between Stack and Heap Allocations
+
+1. In a stack, the allocation and de-allocation are automatically done by the compiler whereas, in heap, it needs to be done by the programmer manually.
+2. Handling the Heap frame is costlier than handling the stack frame.
+3. Memory shortage problem is more likely to happen in stack whereas the main issue in heap memory is fragmentation (Memory fragmentation occurs when your memory is divided up into several non-sequential chunks and gaps that are too big to be used for new memory allocations).
+4. Stack frame access is easier than the heap frame as the stack has a small region of memory and is cache-friendly but in the case of heap frames which are dispersed throughout the memory so it causes more cache misses.
+5. A stack is not flexible, the memory size allotted cannot be changed whereas a heap is flexible, and the allotted memory can be altered.
+6. Accessing the time of heap takes is more than a stack.
+
+## Garbage Collection
+
+- **Definition**:
+
+  - The process of automatically freeing up memory by removing objects that are no longer in use.
+  - Reduces the burden of programmer by automatically performing the allocation or deallocation of memory.
+
+- **Garbage Collector tuning**:
+
+  - Garbage collection process causes the rest of the processes or threads to be paused and thus is costly in nature.
+  - The process of applying several garbage collector based algorithm to solve this problem is called Garbage Collector tuning and is important for improving the performance of a program.
+
+- **Types of Garbage Collectors**:
+
+  - **Serial GC**: Uses a single thread for garbage collection, suitable for single-threaded applications.
+  - **Parallel GC**: Uses multiple threads to speed up garbage collection, suitable for multi-threaded applications.
+  - **Concurrent Mark-Sweep (CMS) GC**: Minimizes pauses by performing most of the garbage collection concurrently with the application.
+  - **G1 GC (Garbage-First)**: Aims to provide high throughput and predictable pause times by dividing the heap into regions.
+
+## Memory Leaks
+
+- **Definition**: Occur when objects are no longer used but are still referenced, preventing them from being garbage collected.
+- **Detection**: Tools like VisualVM, Eclipse MAT, and JProfiler can help identify memory leaks.
+
+## JVM Memory Management
+
+- **Heap Size**: Can be configured using JVM options (`-Xms` for initial heap size and `-Xmx` for maximum heap size).
+- **Garbage Collection Tuning**: JVM options such as `-XX:+UseG1GC` or `-XX:+UseConcMarkSweepGC` can be used to select and tune garbage collectors.
 
 ## Example
 
